--- a/mongo-service.yml
+++ b/mongo-service.yml
@@ -11,8 +11,8 @@ spec:
     - port: 27017
       targetPort: 27017
   # Replace with the IP of your minikube node / master node
-  externalIPs:
-    - 192.168.99.100
+  # externalIPs:
+  #   - 192.168.99.100
   selector:
     app: mongo
     role: master
