--- a/node-deployment.yml
+++ b/node-deployment.yml
@@ -7,7 +7,7 @@ spec:
     matchLabels:
       app: node
       tier: backend
-  replicas: 5
+  replicas: 9
   template:
     metadata:
       labels:
@@ -19,3 +19,8 @@ spec:
           image: adnanrahic/boilerplate-api:latest
           ports:
             - containerPort: 3000
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
